--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                                                       1px 1px 0 #000,
                                                     1px -1px 0 #000;
                                                     -1px -1px 0 #000;">
-          Paradise Donut Company
+          Paradise Donut Company!
         </h1>
         <p class="font-italic mb-0" style="color:black">We make the donuts. You make the memories.</p>
         <br>
